Add validator unlock
